Add aliquot.h Fix math.h linking GCC portability defs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,7 @@ project(trees C)
 set(CMAKE_C_STANDARD 11)
 
 add_executable(trees
-        aliquot.c)
+        aliquot.c aliquot.h)
+
+# link math lib - https://stackoverflow.com/questions/34625627/how-to-link-to-the-c-math-library-with-cmake
+target_link_libraries(trees m)
